Add endpoint to get courses & semesters
